# scrambletron

./: Dockerfile  Dockerfile.api  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/pii_removal/: __init__.py  anonymizer.py  main.py  utils.py
src/scrambletron/: __init__.py  anonymizer.py  api.py  main.py  utils.py
src/scrambletron/recognizers/: __init__.py  cpr_recognizer.py
