[project]
name = "pii-removal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kris927b", email = "kristian.smed.noergaard@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "da-core-news-trf",
    "en-core-web-md",
    "faker>=33.1.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "typer>=0.15.1",
]

[project.scripts]
pii-removal = "pii_removal.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
da-core-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/da_core_news_trf-3.8.0/da_core_news_trf-3.8.0-py3-none-any.whl" }
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }
