[project]
name = "Scrambletron"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "kris927b", email = "kristian.smed.noergaard@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "da-core-news-trf",
    "en-core-web-md",
    "faker>=33.1.0",
    "gender-guesser>=0.4.0",
    "presidio-analyzer[transformers]>=2.2.355",
    "presidio-anonymizer>=2.2.358",
    "typer>=0.15.1",
]

[project.scripts]
scrambletron = "scrambletron.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["black==23.9.1", "pyright==1.1.331", "pre-commit==3.5.0", "ruff>=0.11.6"]
test = [
    "pytest==6.2.5",
    "pytest-lazy-fixture==0.6.3",
    "pytest-cov==2.8.1",
    "pytest-mock>=3.14.0",
]

[tool.uv.sources]
da-core-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/da_core_news_trf-3.8.0/da_core_news_trf-3.8.0-py3-none-any.whl" }
en-core-web-md = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl" }

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [".git", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = ["I", "D"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]
"src/scripts/main.py" = ["I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"
